remove 工程数学的图片

--- a/考研规划.md
+++ b/考研规划.md
@@ -4,21 +4,37 @@
 
 一开始,还是分章节来吧..不要想一口气吃完了.重要的是知识点的理解
 
-不过,知识点的录入,背诵还是可以提下
+必须要带着例题做,定理的理解就在其中,之后,再整理下定理之类的.
+
+~~不过,知识点的录入,背诵还是可以提下~~
 
 
 
 先看教材,做例题,做课后习题?,再用讲义!再练习题!
 
+不理解的感觉?要看好几遍的...
 
+做题,融汇?
+
+
+
+分?
+
+定义
+
+性质
+
+定理/公式
 
 ## 英语
 
 嗯..现在还只是在背单词呢..连语境都没有,,嗯..带着恋练有词的视频看?
 
+词汇 加 词组 一起
+
 题目?,阅读?
 
-
+联系起来,
 
 ## 专业课
 
