--- a/考研数学-整理笔记.md
+++ b/考研数学-整理笔记.md
@@ -103,6 +103,10 @@ $\lim_{x \to \infty}\frac{f(x)}{x} = k_1,\lim_{x \to \infty}[f(x) - k_1 x] = b_1
 
 ## 第五讲中值定理
 
+区间;区间;
+
+夹逼;夹逼;
+
 1. 利用连续导数在闭区间的介值定理可解决的一类中值问题,即证明存在$\xi \in [a,b]$使得某个命题成立
 2. 利用罗尔定理,费马定理可解决一类中值问题,即证明存在$\xi \in (a,b),H(\xi,f(\xi),f'(\xi)) = 0$(辅助函数)
 3. 拉格朗日;双中值且中值不同(分点的选取)
@@ -260,6 +264,12 @@ $H = \frac{n}{\frac{1}{x_1}+\frac{1}{x_2}+...+\frac{1}{x_n}}$
 
 
 
+平方平均数: 一组数据的平方的平均数的算术平方根
+
+
+
+平方>=算术>=几何>=调和
+
 
 
 复合,自然对数,分数,,,强导...
@@ -362,6 +372,8 @@ $\frac{n-1}{n}*\frac{n-3}{n-2}...*\frac{\pi}{2};n为正偶数$
 
 $F'(x) = f[v1(x)]v1'(x) - f[v2(x)]v2'(x)$
 
+真的就只用v1'(x)就行了..f[v1(x)]的形式是多样的.
+
 $F(x) = \int_{v1(x)}^{v2(x)}f(t)dt$
 
 
@@ -402,7 +414,7 @@ $(\frac{-1}{1+e^x})' = \frac{e^x}{(1+e^x)^2}$
 
 $1-x^2;x = sin/cos;x=secx/cscx;....$
 
-​	
+$(sinx)' = cosx$
 
 等价无穷小是近似的方法
 
@@ -416,14 +428,63 @@ $1-x^2;x = sin/cos;x=secx/cscx;....$
 
 有理函数的积分.
 
-
-
-
-
 ### 积分表及推导,,加入背诵...
 
 
 
+### 了解函数性质...
+
+
+
+### 两个重要极限
+
+$\lim_{x \to 0}\frac{\sin x}{x} = 1$
+
+$\lim_{x \to \infty}{(1+\frac{1}{x})^x} = e$
+
+
+
+不定积分的积分方法
+
+1. 凑微分法(变限)
+2. 换元法
+3. 分部积分
+4. 有理函数积分
+
+
+
+## 第八讲:一元函数微分学的几何应用
+
+#### 计算平面图形面积
+
+1. 曲线y = y1(x)与y=y2(x)及x=a,x=b(a<b)所围成的平面图形的面积
+
+    $S = \int_a^b|y_1(x)-y_2(x)|dx$
+
+2. 曲线r = r1(t)与r = r2(t)与两射线t=a,t=b(0<b-a<=2pi)所围成的曲边扇形面积
+
+    $S = \frac{1}{2}\int_a^b|r_1^2(t)-r_2^2(t)|dt$
+
+#### 计算旋转体体积
+
+1. 曲线y=y(x)与x=a,x=b(a<b)及x轴围成的曲边梯形绕x轴一周所得到的旋转体的体积
+    1. $V = \pi \int_a^b y^2(x)dx$
+2. 曲线y=y1(x)>=0,y=y2(x)>=0与x=a,x=b(a<b)及x轴围成的曲边题型绕x轴一周所得到的旋转体的体积
+    1. $V = \pi \int_a^b |y_1^2(x)-y_2^2(x)| dx$
+3. 曲线y=y(x)与x=a,x=b(0<=a<b)及x轴围成的曲边梯形绕y轴一周所得到的旋转体的体积
+    1. $V = 2\pi \int_a^b x |y(x)| dx$
+4. 曲线y=y1(x),y=y2(x)与x=a,x=b(0<=a<b)及x轴围成的曲边梯形绕y轴一周所得到的旋转体的体积
+    1. $V = 2 \pi \int_a^b x|y_1(x)-y_2(x)| dx$
+
+
+
+#### 交换积分区间
+
+二重积分就是加了个密度函数之类的概念....
+
+后面的积分区间就是原先的积分函数之类的,,
+
+画图,,切线,交换即可.
 
 
 
@@ -431,8 +492,298 @@ $1-x^2;x = sin/cos;x=secx/cscx;....$
 
 
 
+### 第九讲 积分等式与积分不等式
+
+$\frac{\int_a^bf(x)g(x)dx - 0}{\int_a^bg(x)dx-0} = \frac{f(\xi)g(\xi)}{g(\xi)};\xi \in [a,b]$
 
 
+
+#### 二,不等式问题
+
+1. 用函数单调性
+    1. "限变量化构造辅助函数,由辅助函数的单调性来证明不等式"
+    2. 多用于给定条件为 f(x) 在 [a,b] 上连续 的情形
+2. 利用拉格朗日中值定理
+    1. 两个值
+3. 利用泰勒公式
+    1. 一个值?
+4. 化简再证明?
+    1. 换元,凑微分,分部
+
+
+
+
+
+
+
+向前走,向后看...推倒;
+
+无法即刻推到,都是需要坚实的计算到达的巧合.
+
+辅助公式,,,函数性质...
+
+ln降级;等价...;
+
+
+
+等价无穷小在乘除法的范围内.
+
+无穷小
+
+
+
+xlnx-x+c
+
+
+
+$f_x'(0,y) = \lim_{x \to 0}\frac{f(x,y)-f(0,y)}{x-0}$
+
+
+
+隐函数存在定理,,,
+
+对一个等式的求导...
+
+F(x,y)=0
+
+
+
+### 第十讲 多元函数微分学
+
+
+
+高阶偏导求解...
+
+
+
+极值问题.
+
+
+
+
+
+### 第十一讲 二重积分
+
+例7.25,7.26;二重积分的精确定义
+
+
+
+可积函数必有界
+
+积分区域可加
+
+积分保号
+
+
+
+积分估值定理(最大最小值乘面积之内)
+
+积分中值定理,(可以找到平均?高?)
+
+
+
+对称性与轮换对称性(交换变量,区间不变(关于y=x对称)(和整))
+
+
+
+#### 二重积分的计算
+
+
+
+二重积分范围与积面积相同.积的是三维的高.
+
+
+
+##### 单位圆
+
+![1200px-Circle-trig6](Resources/Pictures/1200px-Circle-trig6.png)
+
+
+
+
+
+角度遍历,积线
+
+长度遍历,积弧...
+
+对等长的弧积...
+
+
+
+
+
+15-14=1
+
+
+
+二重积分的中值定理,,在两侧区间确定?有关系时,是个方便的东西呢.
+
+
+
+移,变量化,辅助函数,证明函数性质.
+
+
+
+积分求导中的,积分变量,与,积分变量的函数要对应
+
+
+
+乘,加,补全.
+
+
+
+常用等价无穷小
+
+![常用等价无穷小](Resources/Pictures/常用等价无穷小.jpg)
+
+基本上都是除以x的k次方求极限,x -> 0,极限等于1?,等价无穷小的定义.
+
+
+
+$\int_a^bf(x)dx = \int_x^yy(t)x'(t)dt$
+
+
+
+$cos^2x = \frac{1+cos2x}{2}$
+
+ 
+
+### 第十二讲 常微分方程
+
+含有未知函数及其导数的方程称为微分方程
+
+
+
+* 一阶微分方程的求解
+
+    * 变量可分离型
+
+        * dx,dy分离积分求解
+
+    * 可化为变量可分离型
+
+        * 变量代换;u = ax+b+c
+        * 齐次微分方程;u = y/x;:star:
+
+    * 一阶线性微分方程
+
+        y'+p(x)y = q(x)
+
+        辅助函数,$e^{\int p(x)dx}$
+
+    * 伯努力方程
+
+* 二阶可降阶微分方程的求解
+
+    * y'' = f(x,y')型    方程中不显含未知函数y
+
+        变为一阶???
+
+    * y''= f(y,y')型    方程中不显含自变量x
+
+        变为一阶即可
+
+* 高阶线性微分方程的求解
+
+    * 二阶线性微分方程的概念
+
+        变系数与常系数
+
+        齐次(=0)
+
+        与非齐次
+
+    * 线性微分方程的解的结构
+
+        * 若y1(x)是等于f1(x)的二阶线性微分方程的通解,y2(x)是等于f2(x)的
+        * 二阶线性微分方程的通解,
+        * 则y1(x) +y2(x) 是等于f1(x)+f2(x)的微分方程的通解 
+
+        线性无关解
+
+        y(x) = C1y1(x)+C2y2(x)    通解
+
+        特解加通解是特解
+
+        
+
+        两个特解相加是右边系数相加(运算)的方程的解?
+
+    * 二阶常系数齐次线性微分方程的通解
+
+        ​	特征方程?
+
+    * 二阶常系数非齐次线性方程的特解
+
+        * 对于y''+p y'+ q y = f(x)
+        * 当自由项$f(x) = P_n(x)e^{ax}$时特解要设为$y^* = e^{ax}Q_n(x)x^k$
+        * 当自由项$f(x) = e^{ax}[P_m(x)cos\beta x = Pn(x)sin\beta x]$时
+        * 特解要设为$y^* = e^{ax}[Q_l^{(1)}(x)cos\beta x = Q_l^{(2)}(x)sin\beta x]x^k$
+        * 
+
+    * n解常系数齐次线性方程的解
+
+    * n阶非齐次微分方程的解
+
+
+
+直接带入求得关系???
+
+
+
+整体作为e的指数,,,加法是指数上的加法
+
+
+
+伯努利,,换位???
+
+
+
+#### 重要积分
+
+$\int\ln x dx = x \ln x - x +C$
+
+$\int\sec t dt = \ln|sect+tant|+C$
+
+$\int\frac{dx}{\sqrt{x^2+a^2}} = \ln(x+\sqrt{x^2+a^2})+C$;x=a tant
+
+$\int\frac{dx}{x^2+a^2} = \frac{1}{a}arctan\frac{x}{a}+C$
+
+$\int\frac{dx}{x^2-a^2} = \frac{1}{2a}\ln{|\frac{x-a}{x+a}|}+C$;有理函数的积分
+
+$\int arctan\frac{x}{a}dx = x arctan\frac{x}{a} - \frac{a}{2}ln(a^2+x^2)+C$;分部积分
+
+
+
+任一原函数可以表示为
+
+$F(x) = \int_0^xf(t)dt +C ,且F'(x) = f(x)$
+
+
+
+
+
+$\frac{dy}{dx} = \frac{dy}{dt}*\frac{dt}{dx}$
+
+$\frac{d^2y}{dx^2} = \frac{d(\frac{dy}{dx})}{dt}*\frac{dt}{dx}$
+
+
+
+
+
+csc;cot;co
+
+
+
+条件极值..
+
+
+
+最好不要特殊换元 t = e^x
+
+
+
+计算量太大?
 
 
 
