数学笔记 暂存;需要考虑下Blog 和 Note了;

--- a/考研数学-整理笔记.md
+++ b/考研数学-整理笔记.md
@@ -26,6 +26,8 @@ $\lim_{x \to x_0}f(x) = f(x_0)$
 
 f(x) 为函数,f(x_0) 为一确定值,两者却有不同.
 
+delta x -> 0 时,delta y -> 0
+
 
 
 ### 唯一的可能...
@@ -659,19 +661,15 @@ $cos^2x = \frac{1+cos2x}{2}$
     * 变量可分离型
 
         * dx,dy分离积分求解
-
-    * 可化为变量可分离型
-
-        * 变量代换;u = ax+b+c
+* 可化为变量可分离型
+  
+    * 变量代换;u = ax+b+c
         * 齐次微分方程;u = y/x;:star:
-
     * 一阶线性微分方程
-
-        y'+p(x)y = q(x)
-
-        辅助函数,$e^{\int p(x)dx}$
-
-    * 伯努力方程
+* y'+p(x)y = q(x)
+        * 辅助函数,$e^{\int p(x)dx}$
+* 伯努力方程
+        * P(x)y^n
 
 * 二阶可降阶微分方程的求解
 
@@ -709,20 +707,30 @@ $cos^2x = \frac{1+cos2x}{2}$
 
         两个特解相加是右边系数相加(运算)的方程的解?
 
-    * 二阶常系数齐次线性微分方程的通解
+    * 二阶常系数 **齐次** 线性微分方程的 **通解** :star:
 
-        ​	特征方程?
-
-    * 二阶常系数非齐次线性方程的特解
-
-        * 对于y''+p y'+ q y = f(x)
-        * 当自由项$f(x) = P_n(x)e^{ax}$时特解要设为$y^* = e^{ax}Q_n(x)x^k$
-        * 当自由项$f(x) = e^{ax}[P_m(x)cos\beta x = Pn(x)sin\beta x]$时
-        * 特解要设为$y^* = e^{ax}[Q_l^{(1)}(x)cos\beta x = Q_l^{(2)}(x)sin\beta x]x^k$
-        * 
-
+        * 对应的特征方程,求特征根;导数阶与次方阶等价转化
+    * 非重根对应一项$Ce^{\lambda  x}$
+        
+        * 二重根对应$y = (C_1+C_2 x)e^{\lambda x}$
+    * 共轭复根($\alpha \pm \beta i$)对应 $y = e^{ax}(C_1cos\beta x+ C_2 sin \beta x)$
+        
+    *  通解 与 特解
+        
+    * 二阶常系数 **非齐次** 线性方程的**特解** :star:
+    
+        * 首先看看有没有特殊值求特解
+    * 对于y''+p y'+ q y = f(x)
+        * 当自由项$f(x) = P_n(x)e^{\lambda x}$时特解要设为$y^* = e^{\lambda x}Q_n(x)x^k$
+        * $e^{\lambda x}$ 照抄
+            * k 是特征方程 含 根 $\lambda$ 的重复次数
+            * Q 与 P 同次 多项式
+        * 当自由项$f(x) = e^{ax}[P_m(x)cos\beta x + Pn(x)sin\beta x]$时
+        * 特解要设为$y^* = e^{ax}[Q_l^{(1)}(x)cos\beta x + Q_l^{(2)}(x)sin\beta x]x^k$
+            * k 特征方程含 $\alpha + i \beta$ 的重复次数
+    
     * n解常系数齐次线性方程的解
-
+    
     * n阶非齐次微分方程的解
 
 
@@ -752,6 +760,8 @@ $\int\frac{dx}{x^2+a^2} = \frac{1}{a}arctan\frac{x}{a}+C$
 $\int\frac{dx}{x^2-a^2} = \frac{1}{2a}\ln{|\frac{x-a}{x+a}|}+C$;有理函数的积分
 
 $\int arctan\frac{x}{a}dx = x arctan\frac{x}{a} - \frac{a}{2}ln(a^2+x^2)+C$;分部积分
+
+$\int e^{ax} sinbxdx = \frac{1}{a^2+b^2}e^{ax}(asinbx-bcosbx)+C$;n*I = ?
 
 
 
@@ -787,23 +797,92 @@ csc;cot;co
 
 
 
+### 第十四讲 数二专题内容
+
+曲率公式:
+
+$k = \frac{|y''|}{[1+(y')^2]^{\frac{3}{2}}}$
+
+曲率半径:
+
+$R= \frac{1}{k}$
+
+曲率圆表达式:
+
+$(X-\alpha)^2+(Y-\beta)^2 = R^2$
+
+$\alpha = x - \frac{y'[1+(y')^2]}{y''},\beta = y+\frac{1+(y')^2}{y''}$
+
+
+
+### 第二讲 极限于连续
+
+若数列收敛,则其任意子序列也收敛且收敛极限相同.
+
+夹逼,左右极限
+
+
+
+#### 收敛数列的性质
+
+唯一(收敛)
+
+有界(收敛)
+
+保号(趋向)
+
+
+
+若每个数列极限存在,组合一般也存在.
+
+
+
+算术平均数构成,,乘积,指数.
+
+
+
+#### 函数极限存在的充要条件
+
+左右极限存在且相等
+
+函数等于 常数加无穷小
+
+
+
+#### 无穷小运算规则
+
+1. 有限个无穷小的和是无穷小
+2. 有界函数与无穷小的乘积是无穷小
+3. 有限个无穷小的乘积是无穷小
+
+
+
+海涅定理
+
+x->x0;xn->x0;
 
 
 
 
 
+欧拉公式:
+
+$e^{i\theta} = cos\theta + i sin\theta$
 
 
 
+## 线性代数
+
+伴随矩阵: 余子式,转置
 
 
 
+#### 斯密特斯正交化
+
+根据前面的结果,求ai 分量 的独立量?
 
 
 
+$|\lambda E - A| = 0 求\lambda 的值;确定对应的向量 r(\lambda_i E - A) = n - n_i,\lambda_i为n_i重特征值$
 
-
-
-
-
-
+相似对角化,,特征值对角矩阵,其余元素都为0
